<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MoviePageActivity">

    <ImageView
        android:id="@+id/details_iv_back"
        android:layout_width="match_parent"
        android:layout_height="@dimen/back_image_size"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/infinity_war_title"
        android:scaleType="centerCrop"
        android:src="@drawable/bk_avengersinfinitywar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/details_iv_back">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/details_iv_image"
                    android:layout_width="116dp"
                    android:layout_height="175dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/infinity_war_title"
                    android:scaleType="centerCrop"
                    android:src="@drawable/main_avengersinfinitywar" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/details_tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/infinity_war_title"
                        android:textColor="@color/purple"
                        android:textSize="@dimen/text_title_size"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/details_tv_released"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:gravity="start"
                            android:text="@string/released"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/details_tv_released_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="4dp"
                            android:gravity="start"
                            android:text="@string/infinity_war_release_date"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            tools:text="@string/infinity_war_release_date" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/details_btn_trailer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="16dp"
                        android:onClick="openTrailer"
                        android:text="@string/b_movie_t" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/details_tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text="@string/overview"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_tv_overview_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/details_tv_overview"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:gravity="start"
                android:text="@string/infinity_war_overview"
                android:textColor="@color/grey"
                android:textSize="14sp"
                tools:ignore="ObsoleteLayoutParam" />

            <TextView
                android:id="@+id/details_tv_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:layout_below="@id/details_tv_overview_text"
                android:text="@string/details"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="ObsoleteLayoutParam" />

            <TextView
                android:id="@+id/details_tv_details_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/details_tv_details"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:gravity="start"
                android:text="@string/details_content"
                android:textColor="@color/grey"
                android:textSize="14sp"
                tools:ignore="ObsoleteLayoutParam" />
            <TextView
                android:id="@+id/details_tv_box_office"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:layout_below="@id/details_tv_details_text"
                android:text="@string/box_office"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="ObsoleteLayoutParam" />

            <TextView
                android:id="@+id/details_tv_box_office_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/details_tv_box_office"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:gravity="start"
                android:text="@string/box_office_content"
                android:textColor="@color/grey"
                android:textSize="14sp"
                tools:ignore="ObsoleteLayoutParam" />
            <TextView
                android:id="@+id/details_tv_technical_specs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:layout_below="@id/details_tv_box_office_text"
                android:text="@string/technical_specs"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="ObsoleteLayoutParam" />

            <TextView
                android:id="@+id/details_tv_technical_specs_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/details_tv_technical_specs"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:gravity="start"
                android:text="@string/technical_specs_content"
                android:textColor="@color/grey"
                android:textSize="14sp"
                tools:ignore="ObsoleteLayoutParam" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>